# devirtualization_techniques

./: CMakeLists.txt  README.md  macros.h  main.cpp
.github/workflows/: cmake-multi-platform.yml
